src/objects/Confirm_Email_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Contact_Info__c</fullName>
        <label>Contact Info</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>case_Origin__c</fullName>
        <label>case Origin</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Confirm Email Settings</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>case_Origin__c</columns>
        <columns>Email__c</columns>
        <columns>Contact_Info__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>